<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.HomeFragment">

    <!-- Banner图 start -->
    <ImageView
        android:id="@+id/main_banner"
        android:layout_width="match_parent"
        android:layout_height="211dp"
        android:contentDescription="@string/index_title"
        android:scaleType="fitXY"
        android:src="@mipmap/home_banner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- Banner图 end -->

    <!-- 额度卡片 start -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="149dp"
        android:layout_marginRight="22dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="12dp"
                android:text="@string/home_max_limit"
                android:textColor="@color/gray_5"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:text="@string/home_limit_price"
                android:textColor="@color/blackText2"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="80dp"
                android:text="@string/home_accrual"
                android:textColor="@color/gray_7"
                android:textSize="12sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/home_login_get"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:text="@string/home_login_get"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:cornerRadius="20dp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <!-- 额度卡片 end -->

    <!-- 4个小菜单 start -->
    <LinearLayout
        android:id="@+id/main_menu"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal"
        android:paddingStart="25dp"
        android:paddingTop="68dp"
        android:paddingEnd="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_banner">

        <TextView
            style="@style/main_menu_item"
            android:text="@string/home_novice_gift"
            app:drawableTopCompat="@mipmap/novice_gift" />

        <TextView
            style="@style/main_menu_item"
            android:text="@string/home_hot_exercise"
            app:drawableTopCompat="@mipmap/hot_exercise" />

        <TextView
            style="@style/main_menu_item"
            android:text="@string/home_insurance"
            app:drawableTopCompat="@mipmap/insurance" />

        <TextView
            style="@style/main_menu_item"
            android:text="@string/home_recommend"
            app:drawableTopCompat="@mipmap/hot_exercise" />

    </LinearLayout>
    <!-- 4个小菜单 end -->

    <!-- 出借卡片 start -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5fafd"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_menu">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="288dp"
            android:layout_marginBottom="200dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_five_product"
                        android:textColor="@color/blackText3"
                        android:textSize="16sp" />

                    <org.kuro.financial.view.button.RoundButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:paddingStart="6dp"
                        android:paddingTop="3dp"
                        android:paddingEnd="6dp"
                        android:paddingBottom="3dp"
                        android:text="@string/home_newcomer_exclusive"
                        android:textColor="#ff4c4c"
                        android:textSize="11sp"
                        app:borderColor="#ff4c4c"
                        app:radiusForBottomLeft="7dp"
                        app:radiusForTopRight="7dp"
                        app:textColorForPressed="#ff4c4c" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/home_interest_rate"
                    android:textColor="@color/gray_6"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="18dp"
                    android:gravity="center"
                    android:text="@string/home_10percent"
                    android:textColor="#ff4c4c"
                    android:textSize="40sp" />

                <View
                    style="@style/default_line"
                    android:layout_marginStart="26dp"
                    android:layout_marginEnd="26dp"
                    android:background="#cccccc" />

                <!-- 起投金额栏 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="26dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/home_invest_start"
                        android:textColor="@color/gray_6"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_invest_start_num"
                        android:textColor="#ff4c4c"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_invest_start_unit"
                        android:textColor="@color/gray_6"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        tools:ignore="RtlHardcoded">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:text="@string/home_lending_term"
                            android:textColor="@color/gray_6"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_lending_term_num"
                            android:textColor="#ff4c4c"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_lending_term_unit"
                            android:textColor="@color/gray_6"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>
                <!-- 起投金额栏 end -->

                <Button
                    style="@style/primary_button"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/home_lending" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <!-- 出借卡片 end -->

</androidx.constraintlayout.widget.ConstraintLayout>