<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.SignInActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:contentDescription="@string/mine_sign_in"
        android:scaleType="fitXY"
        android:src="@mipmap/sign_in_bg" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="23dp"
        android:gravity="center"
        android:text="@string/sign_tip"
        android:textColor="#0f5dff"
        android:textSize="15sp" />

    <GridView
        android:id="@+id/sign_in_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:horizontalSpacing="6dp"
        android:numColumns="7" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/sign_ranking"
        android:textColor="@color/gray_6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:drawablePadding="5dp"
        android:text="@string/sign_gold"
        android:textColor="@color/gray_6"
        app:drawableLeftCompat="@mipmap/gold" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="26dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:cornerRadius="50dip" />
</LinearLayout>